[package]
name = "echo-server-podman"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.4"
tokio = { version = "1.0", features = ["full"] }
reqwest = "0.12.22"

[dependencies.openssl]
version = "0.10.45"
features = ["vendored"]